# statannotations

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  coverage.sh  hatch.toml  make_doc.sh  pyproject.toml  readme.md  readthedocs.yaml  requirements.txt  setup.py  statannot.py
.github/workflows/: python-package.yml
doc/: example.ipynb  samples.tsv
docs/: requirements.in  requirements.txt
docs/source/: conf.py  custom-test.rst  index.rst  requirements.txt  statannotations.rst  statannotations.stats.rst
example/: example.ipynb
example/.ipynb_checkpoints/: example-checkpoint.ipynb
src/statannotations/: Annotation.py  compat.py  format_annotations.py
src/statannotations/stats/: ComparisonsCorrection.py  StatTest.py  __init__.py  test.py  utils.py
statannot/: ComparisonsCorrection.py  StatResult.py  __init__.py  _version.py  comparisons_corrections.py  format_annotations.py  statannot.py  utils.py
statannot/comparisons_corrections/: ComparisonsCorrection.py  funcs.py  utils.py
statannot/stats/: ComparisonsCorrection.py  StatResult.py  funcs.py  tests.py  utils.py
statannotations/: Annotation.py  Annotator.py  PValueFormat.py  _GroupsPositions.py  _Plotter.py  _Xpositions.py  __init__.py  _version.py  compat.py  format_annotations.py  statannotations.py  utils.py
statannotations.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
statannotations/comparisons_corrections/: utils.py
statannotations/stats/: ComparisonsCorrection.py  README.rst  StatResult.py  StatTest.py  funcs.py  test.py  tests.py  tests.py.patch  utils.py
tests/: nottest_xpositions.py  test_add_statannotations.py  test_annotation.py  test_annotator.py  test_comparisons_corrections.py  test_format_annotations.py  test_integrate_annotator.py  test_integrate_format_multiple.py  test_integrate_plotter.py  test_missing_group.py  test_native_scale.py  test_order_group.py  test_plotter.py  test_plotter_no_df.py  test_positions.py  test_pvalue_format.py  test_stat_result.py  test_statannot.py  test_stats_test.py  test_stats_utils.py  test_stattest.py  test_utils.py
usage/: example.ipynb  test_script.py
